# SENG401

./: .gitignore  .project  README.md  compile.sh  tatus
NHL/: README.md  karma.conf.js  package-lock.json  package.json
NHL/src/: index.html
NHL/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts
NHL/src/app/create/: create.component.css  create.component.html  (+1 more)
NHL/src/environments/: environment.ts
Notifications/: .project
Notifications/src/: MongoDBHandler.java  MyNotification.java  runNotifications.java
comments-microservice/: .gitignore  Cargo.toml  README.md  build.rs
comments-microservice/proto/: comments.proto
comments-microservice/src/: command.rs  comment.rs  comments.rs  event.rs  event_processor.rs  main.rs  query.rs  query_update.rs
comments-microservice/src/comments/: command.rs  query.rs
forumpost-microservice/: README.md
forumpost-microservice/proto/forum/: forum.pb.go  forum.proto
forumpost-microservice/proto/post/: post.pb.go  post.proto
forumpost-microservice/sample-client/: readme.txt
forumpost-microservice/scripts/: data.txt  populate.go
forumpost-microservice/server/: main.go
forumpost-microservice/server/forumpost/: forum.go  main.go  post.go
main-webapp/: README.md
main-webapp/nhlweb/: pom.xml
nhl/entities/: Comment.java  Forum.java  Post.java  User.java  UserInfo.java
nhl/model/: ModelController.java  UserModel.java
notifications-microservice/: pom.xml
notifications-microservice/grpc/: notifications.proto
notifications-microservice/src/: MongoDBHandler.java  runNotifications.java
(+173 files in other folders)
